<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="5dp">

        <EditText
            android:id="@+id/isbnET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:hint="Codice ISBN"
            android:maxLength="10"/>

        <EditText
            android:id="@+id/titoloET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:hint="Titolo"
            android:maxLength="50"
            android:inputType="text"/>

        <EditText
            android:id="@+id/autoreET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:hint="Autore"
            android:maxLength="50"
            android:inputType="text"/>


        <EditText
            android:id="@+id/editoreET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:hint="Editore"
            android:maxLength="50"
            android:inputType="text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_margin="4dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Categoria:"
                android:layout_gravity="center"
                android:textSize="20sp"/>

            <Spinner
                android:id="@+id/categoriaALSpinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown"
                android:textSize="20sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_margin="4dp">

            <EditText
                android:id="@+id/annoET"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:hint="Anno di pubblicazione"
                android:inputType="number"
                android:maxLength="4" />

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/ncopieET"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:hint="N. copie"
                android:inputType="number" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_margin="4dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Biblioteca:"
                android:layout_gravity="center"
                android:textSize="20sp"/>

            <Spinner
                android:id="@+id/bibliotecaALSpinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown"
                android:textSize="20sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_margin="4dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Zona:"
                android:layout_gravity="center"
                android:textSize="20sp"/>

            <Spinner
                android:id="@+id/zonaALSpinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown"
                android:textSize="20sp"/>

        </LinearLayout>


        <EditText
            android:id="@+id/imgET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:hint="URL immagine copertina"
            android:maxLength="500" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="50dp"
            android:layout_marginVertical="10dp">



        <Button
            android:id="@+id/aggiungiLibroButton"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="#146DDA"
            android:textColor="@color/white"
            android:text="Aggiungi"
            android:textSize="20sp" />

        </LinearLayout>

        </LinearLayout>

</LinearLayout>

</ScrollView>