<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1">


    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="120dp"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/logounisa"
        />

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="80dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:gravity="center">

        <EditText
            android:id="@+id/emailText"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:layout_margin="15dp"
            android:hint="Email"/>

        <EditText
            android:id="@+id/passwordText"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:layout_margin="15dp"
            android:inputType="textPassword"
            android:hint="Password"/>

        <Button
            android:id="@+id/loginButton"
            android:layout_width="200dp"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:layout_margin="15dp"
            android:text="Login"
            android:textSize="20dp"
            android:backgroundTint="#146DDA"/>

    </LinearLayout>

</LinearLayout>