<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1">

    <ImageButton
        android:id="@+id/gestioneLibroIB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:src="@drawable/logout"
        android:backgroundTint="@color/white"
        />

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/logounisa"
        />

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="160dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <Button
            android:id="@+id/addButton"
            android:layout_width="fill_parent"
            android:layout_height="150dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="#146DDA"
            android:drawableLeft="@drawable/plus"
            android:text="Aggiungi Libri"
            android:textSize="13sp" />

        <Button
            android:id="@+id/modifyButton"
            android:layout_width="fill_parent"
            android:layout_height="150dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="#146DDA"
            android:drawableLeft="@drawable/paintbrush"
            android:text="Modifica Libri"
            android:textSize="13sp" />

    </LinearLayout>

</LinearLayout>